devops-portfolio/projects/k8s-poc/flash-cards/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flash-cards
  annotations:
    external-access: "true"
    # Add metallb annotation if using MetalLB
    metallb.universe.tf/address-pool: default
spec:
  selector:
    app: flash-cards
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    name: web
  - port: 3000
    targetPort: 3000
    name: api
