devops-portfolio/projects/k8s-poc/flash-cards/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flash-cards
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: flash-cards.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flash-cards
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flash-cards
            port:
              number: 3000
